--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -116,7 +116,7 @@
 
 # 404 page
 - id: pageNotFound
-  translation: "The page you are looking for does not exist or another error occurred. Try going back to our {{ . }}."
+  translation: "The page you are looking for does not exist or another error occurred.<br><br>Try going back to my {{ . }}."
 - id: pageNotFoundTitle
   translation: "Page not found"
 - id: pageNotFoundHome
